@@ -188,7 +188,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>@{jacocoArgLine} -XX:MaxPermSize=100m</argLine>
+                    <argLine>@{jacocoArgLine} -XX:MaxMetaspaceSize=100m</argLine>
                 </configuration>
             </plugin>
 
