@@ -214,13 +214,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>@{jacocoArgLine} -XX:MaxPermSize=100m</argLine>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 </project>
